Fix to overlapping movie card title

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -14,7 +14,7 @@ form th { text-align: right;}
 .show-page.user form .field-list { width: 450px;}
 
 .card.film { position: relative; }
-.no-movie, .need-to-post-agreements { position: absolute; top: 5px; right: 5px; text-align: right; color: red;}
+.no-movie, .need-to-post-agreements { text-align: right; color: red;}
 
 .film.show-page form { margin-bottom: 30px;}
 
